<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:background="@drawable/background"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.Medical"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Burger Combo"
            app:expandedTitleTextAppearance="@style/Theme.Medical"
            app:collapsedTitleTextAppearance="@style/Theme.Medical"
            android:background="@drawable/background"
            android:id="@+id/collapsing_toolbar">

            <ImageView
                android:layout_width="320dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/rawatinap"
                android:layout_gravity="center|end"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/test1"/>
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
        
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            >
            
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/burgervektor"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F1C68C"
        android:contentDescription="@string/test2"
        />
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>