<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@drawable/back2"
        tools:context=".tentangActivity"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/labku" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:text="Lab. Mobile Communication dan IoT"
                        android:textStyle="italic"
                        android:textColor="#282828"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/tentang1"
                        android:textColor="#777777"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/tentang2"
                        android:textColor="#777777"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/tentang3"
                        android:textColor="#777777"
                        android:textSize="12sp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="12dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:id="@+id/titlelayanan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                app:cardBackgroundColor="@color/colorBlack"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="19dp"
                        android:layout_height="19dp"
                        android:src="@drawable/ic_home_24">

                    </ImageView>

                    <TextView
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:text="Home"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/cardExit"-->
<!--                android:layout_width="161dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_row="1"-->
<!--                android:layout_rowWeight="1"-->
<!--                android:layout_column="0"-->
<!--                android:layout_columnWeight="1"-->
<!--                android:layout_gravity="fill_horizontal"-->
<!--                app:cardBackgroundColor="@color/colorBlack"-->
<!--                app:cardCornerRadius="8dp"-->
<!--                app:cardElevation="8dp"-->
<!--                app:cardUseCompatPadding="true">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_vertical|center_horizontal"-->
<!--                    android:gravity="center"-->
<!--                    android:orientation="horizontal">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="19dp"-->
<!--                        android:src="@drawable/ic_logout_24">-->

<!--                    </ImageView>-->

<!--                    <TextView-->
<!--                        android:layout_width="126dp"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:text="LOGOUT"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="@color/colorWhite"-->
<!--                        android:textStyle="bold" />-->

<!--                </LinearLayout>-->
<!--            </androidx.cardview.widget.CardView>-->

        </LinearLayout>

    </ScrollView>